; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/qla2xxx/extr_qla_nx.c_qla82xx_write_optrom_data.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/qla2xxx/extr_qla_nx.c_qla82xx_write_optrom_data.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.scsi_qla_host = type { i32 }

@QLA_FUNCTION_FAILED = common dso_local global i32 0, align 4
@QLA_SUCCESS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @qla82xx_write_optrom_data(%struct.scsi_qla_host* %0, i32* %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.scsi_qla_host*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store %struct.scsi_qla_host* %0, %struct.scsi_qla_host** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %10 = load %struct.scsi_qla_host*, %struct.scsi_qla_host** %5, align 8
  %11 = getelementptr inbounds %struct.scsi_qla_host, %struct.scsi_qla_host* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @scsi_block_requests(i32 %12)
  %14 = load %struct.scsi_qla_host*, %struct.scsi_qla_host** %5, align 8
  %15 = load i32*, i32** %6, align 8
  %16 = load i32, i32* %7, align 4
  %17 = load i32, i32* %8, align 4
  %18 = ashr i32 %17, 2
  %19 = call i32 @qla82xx_write_flash_data(%struct.scsi_qla_host* %14, i32* %15, i32 %16, i32 %18)
  store i32 %19, i32* %9, align 4
  %20 = load %struct.scsi_qla_host*, %struct.scsi_qla_host** %5, align 8
  %21 = getelementptr inbounds %struct.scsi_qla_host, %struct.scsi_qla_host* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = call i32 @scsi_unblock_requests(i32 %22)
  %24 = load i32, i32* %9, align 4
  %25 = icmp ne i32 %24, 0
  br i1 %25, label %26, label %28

26:                                               ; preds = %4
  %27 = load i32, i32* @QLA_FUNCTION_FAILED, align 4
  store i32 %27, i32* %9, align 4
  br label %30

28:                                               ; preds = %4
  %29 = load i32, i32* @QLA_SUCCESS, align 4
  store i32 %29, i32* %9, align 4
  br label %30

30:                                               ; preds = %28, %26
  %31 = load i32, i32* %9, align 4
  ret i32 %31
}

declare dso_local i32 @scsi_block_requests(i32) #1

declare dso_local i32 @qla82xx_write_flash_data(%struct.scsi_qla_host*, i32*, i32, i32) #1

declare dso_local i32 @scsi_unblock_requests(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
